--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore node_modules directory
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Ignore log files
+*.log
 
-# testing
-/coverage
+# Ignore compiled files
+*.class
+*.jar
+*.war
+*.ear
 
-# production
-/build
+# Ignore IDE specific files
+.idea/
+.vscode/
 
-# misc
+# Ignore operating system files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+Thumbs.db
