--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
