--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.11.0",
+    "chart.js": "^4.4.2",
     "google-map-react": "^2.2.1",
     "mapbox-gl": "^3.3.0",
     "maplibre-gl": "^4.2.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.7",
     "react-scripts": "5.0.1",
